--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.15.2",
     "mysql": "^2.18.1"
   },
