--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.15.2",
+    "hbs": "^4.2.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
