--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.15.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
