--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.15.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
