--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.15.2",
@@ -19,7 +20,8 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "redis": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
