--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap-icons": "^1.9.1",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
